# mana-poct

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  SETUP.md  docker-compose.yml
back-end/: Dockerfile  README.md  alembic.ini  pyproject.toml
back-end/alembic/: env.py
back-end/alembic/versions/: 0001_initial_tables.py
back-end/app/: config.py  main.py
back-end/app/api/: health.py  hello.py  sessions.py
back-end/app/db/: models.py  session.py
back-end/app/domain/: rules_engine.py  scenarios.py  variables.py
back-end/app/events/: composite_publisher.py  factory.py  kafka_publisher.py  log_publisher.py  ntfy_publisher.py  outbox.py  publisher.py
back-end/app/llm/: base.py  factory.py  fake.py  openrouter_provider.py  translate.py
back-end/app/mock_db/: fixtures.py  repository.py  seed.py
back-end/app/observability/: langfuse_tracer.py  noop_tracer.py  tracer.py
back-end/app/orchestration/: fsm.py  orchestrator.py  prompts.py  tools.py
back-end/app/schemas/: api.py  domain.py  llm.py
back-end/app/tests/: test_dialogue_robust.py  test_events.py  test_fsm.py  test_mock_db.py  test_observability.py  test_rules_engine.py
evals/: README.md  run_eval.py  scenarios.json
evals/results/: slice1_model_comparison.md  slice2_edge_cases.md
front-end/: .gitignore  .prettierrc.json  Dockerfile  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vercel.json  vite.config.ts
front-end/src/: App.tsx  index.css  main.tsx
front-end/src/context/: index.ts
front-end/src/hooks/: helper.ts  (+4 more)
(+33 files in other folders)
